mocha is a devDependency, depend on * versions

--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
   },
   "homepage": "https://github.com/javierarilos/envfig",
   "dependencies": {
-    "mocha": "^2.0.1"
   },
   "devDependencies": {
-    "chai": "^1.10.0"
+    "mocha": "*",
+    "chai": "*"
   }
 }
